<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/batteryCategoryLabel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/batteryCategory"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/batteryVoltageLabel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/voltage"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/batteryVoltageText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/batteryAmpHourLabel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/ampHour"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/batteryAmpHourText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/batteryCountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/batteryCount"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/batteryCountText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/totalVALabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalVA"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/totalVAUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num0"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ListView
                        android:id="@+id/listView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >
                    </ListView>

                </LinearLayout>
            </ScrollView>

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Exit" />

</LinearLayout>